5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4068/executions/1578_996.log
== TEST (2019-03-13 18:31:31) 
-- CODE:
print("***** ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("***** ")
-- OUTPUT:
***** 
* o o * 
* ^ * 
* _ _ _ * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:31:36) 
-- CODE:
print("***** ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("***** ")
-- EXECUTION TIME:
0.126822
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
* ^ * 
* _ _ _ * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:31:53) 
-- CODE:
print("* * * * * ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("* * * * * ")
-- EXECUTION TIME:
0.178266
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* * * * * 
* o o * 
* ^ * 
* _ _ _ * 
* * * * *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:31:58) 
-- CODE:
print("* * * * * ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("* * * * * ")
-- OUTPUT:
* * * * * 
* o o * 
* ^ * 
* _ _ _ * 
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:32:06) 
-- CODE:
print("* * * * * ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("* * * * * ")
-- EXECUTION TIME:
0.222654
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
* * * * * 
* o o * 
* ^ * 
* _ _ _ * 
* * * * *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:15:05) 
-- CODE:
print("* * * * * ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("* * * * * ")
-- OUTPUT:
* * * * * 
* o o * 
* ^ * 
* _ _ _ * 
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:15:18) 
-- CODE:
print("* * * * * ")
print("* o o * ")
print("* ^ * ")
print("* _ _ _ * ")
print("* * * * * ")
-- OUTPUT:
* * * * * 
* o o * 
* ^ * 
* _ _ _ * 
* * * * *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:16:08) 
-- CODE:
*****
(* o o *)
-- ERROR:
File "XXXX", line 1
    *****
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:16:32) 
-- CODE:
*****
(* o o *)
-- ERROR:
File "XXXX", line 1
    *****
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:16:52) 
-- CODE:
*****
(* o o *)
-- ERROR:
File "XXXX", line 1
    *****
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:17:07) 
-- CODE:
* * * * *
-- ERROR:
File "XXXX", line 1
    * * * * *
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:17:50) 
-- CODE:
'*****'
-- ERROR:
File "XXXX", line 1
    * * * * *
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:18:32) 
-- CODE:
'*****'
(*0 0 *)
-- ERROR:
File "XXXX", line 2
    (*0 0 *)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:58:24) 
-- CODE:
'*****'
(*0 0 *)
-- ERROR:
File "XXXX", line 2
    (*0 0 *)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:58:38) 
-- CODE:
(*****)
-- ERROR:
File "XXXX", line 1
    (*****)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:58:56) 
-- CODE:
"*****"
-- ERROR:
File "XXXX", line 1
    (*****)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:59:17) 
-- CODE:
"*****"
-- EXECUTION TIME:
0.154249
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:59:38) 
-- CODE:
'*****'
-- EXECUTION TIME:
0.164996
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:42) 
-- CODE:
'*****'
-- ERROR:
File "XXXX", line 1
    (*****)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:59:44) 
-- CODE:
'*****'
-- EXECUTION TIME:
0.192787
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:59:59) 
-- CODE:
'*****'
-- ERROR:
File "XXXX", line 1
    (*****)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:01) 
-- CODE:
'*****'
-- EXECUTION TIME:
0.156435
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:00:13) 
-- CODE:
 *****
-- ERROR:
File "XXXX", line 1
    *****
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:00:17) 
-- CODE:
 *****
-- EXECUTION TIME:
0.191221
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    *****
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:52) 
-- CODE:
  *****
(* 0 0 *)
 *  ^  *
 * --- *
  *****

-- ERROR:
File "XXXX", line 1
    *****
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:21) 
-- CODE:
  *****
(* 0 0 *)
 *  ^  *
 * --- *
  *****

-- ERROR:
File "XXXX", line 1
    *****
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:59) 
-- CODE:
  *****
(* 0 0 *)
 *  ^  *
 * --- *
  *****

-- ERROR:
File "XXXX", line 1
    *****
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:14) 
-- CODE:
  * * * * *
(* 0 0 *)
 *  ^  *
 * --- *
  *****

-- ERROR:
File "XXXX", line 1
    * * * * *
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:30) 
-- CODE:
*****
(* 0 0 *)
 *  ^  *
 * --- *
  *****

-- ERROR:
File "XXXX", line 1
    *****
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:56) 
-- CODE:
*****

-- ERROR:
File "XXXX", line 1
    *****
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:58) 
-- CODE:
*****

-- EXECUTION TIME:
0.188796
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    *****
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:10:21) 
-- CODE:
print( ***** )
print(* o o *)
print *  ^  *
print * --- *
print  *****
-- ERROR:
File "XXXX", line 1
    print( ***** )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:14) 
-- CODE:
print( ***** )
print(* o o *)
print(*  ^  *)
print(* --- *)
print (*****)
-- ERROR:
File "XXXX", line 1
    print( ***** )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:25) 
-- CODE:
print  (*****)
print((* o o *))
print (*  ^  *)
print (* --- *)
print  (*****)
-- ERROR:
File "XXXX", line 1
    print  (*****)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:17:16) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:17:29) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.300595
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
